[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "asra"
version = "0.1.0"
description = "Adaptive Substituent Reordering Algorithm (ASRA) for enzyme engineering libraries"
authors = [
  { name="Martin Engqvist", email="martin.engqvist@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy"]   # Only core runtime dependency


[project.urls]
Homepage = "https://github.com/mengqvist/asra"
